welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ';' expected but integer literal found.
  if (Math.min(you,date))<=2{
                           ^