welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
  if (Math.min(you,date))<=2{
    return 0
  }else{
    if (Math.max(you,date)>=8){
     return 2
    }else return 1
  }
}
